Solved the overflow issue by dividing the width of the cards in three (c2)

--- a/flex-challenge/challenge2.css
+++ b/flex-challenge/challenge2.css
@@ -6,7 +6,7 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	height: 100vh;
+	height: 100%;
 	margin: 0;
 }
 
@@ -14,12 +14,13 @@ main {
 	display: flex;
 	width: 900px;
 	height: 300px;
+	align-items: center;
 	flex-wrap: wrap;
 }
 
 main div {
 	height: 100%;
-	width: 100%;
+	width: 33%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
